package enumsInterfaces;

public interface Reprodutivel {
    void reproduzir();
    void pausar();
}
