@startuml
' Definição das classes principais
class Musica {
    +int id
    +String titulo
    +String artista
    +String album
    +GeneroMusical genero
    +void reproduzir()
}

class Playlist {
    +static final int MAX_MUSICAS = 50
    +String nome
    +Musica[] musicas
    +ArrayList<Musica> listaMusicas
    +void adicionarMusica(Musica musica)
    +void removerMusica(Musica musica)
}

class Artista {
    +String nome
    +List<Album> albuns
}

class Album {
    +String nome
    +List<Musica> musicas
}

class SpotifyAPI {
    -static SpotifyAPI instancia
    -static final String API_URL = "https://api.spotify.com"
    -SpotifyAPI()
    +static SpotifyAPI getInstance()
    +Musica buscarMusica(String nome) throws Exception
    +void reproduzirMusica(Musica musica)
    +void adicionarMusicaAPlaylist(Playlist playlist, Musica musica)
}

class GUI {
    +void mostrarTelaPrincipal()
    +void exibirResultadosBusca(List<Musica> musicas)
    +void atualizarReproducao(Musica musica)
}

class Sistema {
    -static Sistema instancia
    +static Sistema getInstance()
    +void iniciar()
    +ArrayList<Usuario> usuarios
    +ArrayList<Musica> bibliotecaMusicas
}

interface Reprodutivel {
    +void reproduzir()
    +void pausar()
}

class Usuario {
    +String nome
    +ArrayList<Playlist> playlists
    +void criarPlaylist(String nome)
    +abstract void visualizarPlaylists()
}

class UsuarioPremium {
    +int limitePlaylists
    +void visualizarPlaylists()
}

class UsuarioGratuito {
    +int limiteMusicasPorPlaylist
    +void visualizarPlaylists()
}

enum GeneroMusical {
    ROCK, POP, JAZZ, CLASSICA, ELETRONICA, HIPHOP
}

' Relacionamentos entre as classes
Usuario "1" *-- "0..*" Playlist
Playlist "1" *-- "0..*" Musica
Artista "1" *-- "0..*" Album
Album "1" *-- "0..*" Musica

SpotifyAPI --|> Singleton
Sistema --|> Singleton

Musica --|> Reprodutivel
Playlist --|> Reprodutivel

Usuario <|-- UsuarioPremium
Usuario <|-- UsuarioGratuito

GUI ..> SpotifyAPI
GUI ..> Playlist
GUI ..> Musica
GUI ..> Usuario

Sistema ..> SpotifyAPI
Sistema ..> GUI
Sistema ..> Playlist
Sistema ..> Usuario

@enduml
